eks-gpu-modules/workloads/next-js-vllm-ui/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: vllm-ui-deploy
  namespace: vllm-ui
  labels:
    app: nextjs-vllm-ui
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nextjs-vllm-ui
  template:
    metadata:
      labels:
        app: nextjs-vllm-ui
    spec:
      containers:
      - name: ui
        image: ghcr.io/yoziru/nextjs-vllm-ui:latest
        ports:
        - containerPort: 3000
        resources:
          limits:
            cpu: "1"
            memory: 1Gi
          requests:
            cpu: 500m
            memory: 512Mi
