eks-gpu-modules/workloads/next-js-vllm-ui/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: vllm-ui-svc
  namespace: vllm-ui
spec:
  type: ClusterIP
  selector:
    app: nextjs-vllm-ui 
  ports:
  - port: 3000
    targetPort: 3000
